plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithBundledCompilerPlugins/serialize.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR/serialize_fake_plugin.jar
// FILE: main.kt
package test

<!HIGHLIGHTING("textAttributesKey='KOTLIN_KEYWORD'")!>import<!> kotlinx.serialization.<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>Serializable<!>

<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>@Serializable<!>
class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>BaseClass<!>

val <!HIGHLIGHTING("textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>companionRef<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>BaseClass<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>Companion<!> = <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>BaseClass<!>

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>test<!>() {
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>BaseClass<!>.<!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_CALL'")!>serializer<!>()
}
